Fix text-align center for body

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,20 @@
 /* Copied from Pairfonts.com - Nunito for header and Roboto Mono for all other text */
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@900&family=Roboto+Mono:wght@300&display=swap");
 
+
+/* Body position */ 
+
+body {
+  /* Glöm inte att lägga till background color när du har fixat rätt bakrundsbild så kontrasten blir rätt! */
+  text-align: center;
+}
+
 /* Logo */
 
 #logo {
   height: 15px;
-  font-family: nunito, sans-serif;
+  font-family: nunito, sans-serif; 
+  
 } 
 
 /* All other text font */ 
